--- a/public/index.html
+++ b/public/index.html
@@ -26,7 +26,7 @@
 		<link href="%PUBLIC_URL%/assets/css/style.css" rel="stylesheet" />
 		<title>React App</title>
 	</head>
-	<body>
+	<body onresize="mobilenav()" onload="mobilenav()">
 		<noscript>You need to enable JavaScript to run this app.</noscript>
 		<div id="root"></div>
 		<!-- Vendor JS Files -->
