--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,12 @@
 			rel="stylesheet"
 		/>
 		<link href="https://fonts.googleapis.com/css2?family=Secular+One&display=swap" rel="stylesheet" />
-
+		<link
+			rel="stylesheet"
+			href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
+			integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN"
+			crossorigin="anonymous"
+		/>
 		<!-- Vendor CSS Files -->
 		<link href="%PUBLIC_URL%/assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet" />
 		<link href="%PUBLIC_URL%/assets/vendor/icofont/icofont.min.css" rel="stylesheet" />
@@ -21,13 +26,81 @@
 		<link href="%PUBLIC_URL%/assets/vendor/venobox/venobox.css" rel="stylesheet" />
 		<link href="%PUBLIC_URL%/assets/vendor/owl.carousel/assets/owl.carousel.min.css" rel="stylesheet" />
 		<link href="%PUBLIC_URL%/assets/vendor/aos/aos.css" rel="stylesheet" />
+		<link href="%PUBLIC_URL%/mycollection/font/flaticon.css" rel="stylesheet" />
 
 		<!-- Template Main CSS File -->
 		<link href="%PUBLIC_URL%/assets/css/style.css" rel="stylesheet" />
+		<style>
+			.preloader {
+				display: flex;
+				justify-content: center;
+				height: 100vh;
+			}
+
+			.rotate {
+				margin: auto;
+
+				height: 5rem;
+				width: 5rem;
+				border: 0.2rem solid #cc6140;
+				border-top-color: #d84a13d1;
+				border-radius: 50%;
+				-webkit-animation-name: loader-animation;
+				animation-name: loader-animation;
+				-webkit-animation-duration: 1.1s;
+				animation-duration: 1.1s;
+				-webkit-animation-fill-mode: both;
+				animation-fill-mode: both;
+				-webkit-animation-iteration-count: infinite;
+				animation-iteration-count: infinite;
+				-webkit-animation-timing-function: cubic-bezier(0.38, 0.02, 0.51, 1.03);
+				animation-timing-function: cubic-bezier(0.38, 0.02, 0.51, 1.03);
+				-webkit-transform-origin: center center;
+				transform-origin: center center;
+			}
+
+			.loader-hide {
+				display: none;
+			}
+			@-webkit-keyframes loader-animation {
+				0% {
+					-webkit-transform: rotate(0deg);
+					transform: rotate(0deg);
+				}
+				100% {
+					-webkit-transform: rotate(360deg);
+					transform: rotate(360deg);
+				}
+			}
+
+			@keyframes loader-animation {
+				0% {
+					-webkit-transform: rotate(0deg);
+					transform: rotate(0deg);
+				}
+				100% {
+					-webkit-transform: rotate(360deg);
+					transform: rotate(360deg);
+				}
+			}
+
+			@keyframes rotation {
+				from {
+					transform: rotate(0deg);
+				}
+
+				to {
+					transform: rotate(359deg);
+				}
+			}
+		</style>
 		<title>React App</title>
 	</head>
 	<body onresize="mobilenav()" onload="mobilenav()">
 		<noscript>You need to enable JavaScript to run this app.</noscript>
+		<div class="preloader">
+			<img src="https://spennyapp.com/static/media/logo.6c935978.png" class="rotate" width="100" height="100" />
+		</div>
 		<div id="root"></div>
 		<!-- Vendor JS Files -->
 		<script src="%PUBLIC_URL%/assets/vendor/jquery/jquery.min.js"></script>
@@ -41,5 +114,14 @@
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/2.0.2/anime.min.js"></script>
 		<!-- Template Main JS File -->
 		<script src="%PUBLIC_URL%/assets/js/main.js"></script>
+		<!-- The core Firebase JS SDK is always required and must be listed first -->
+		<script src="/__/firebase/7.22.1/firebase-app.js"></script>
+
+		<!-- TODO: Add SDKs for Firebase products that you want to use
+     https://firebase.google.com/docs/web/setup#available-libraries -->
+		<script src="/__/firebase/7.22.1/firebase-analytics.js"></script>
+
+		<!-- Initialize Firebase -->
+		<script src="/__/firebase/init.js"></script>
 	</body>
 </html>
